added chart comments

--- a/web/index.html
+++ b/web/index.html
@@ -68,10 +68,11 @@
                 </li>
                 <li>
                   Based on PM2.5 values, it seems as though 2020 may be seeing a decrease in pollution,
-                  which could be related to industry slowdowns from COVID19. However, there is a lot
-                  of uncertainty with this conclusion. Similar conclusions cannot be made about Ozone, 
-                  since it is heavily influenced by temperature, and we only have data through April
-                  for 2020.
+                  which could be related to industry slowdowns from COVID19. This trend is primarily 
+                  seen in northeastern cities, which have implemented some of the strictest "shelter in
+                  place" measures. However, there is a lot of uncertainty with this conclusion. Similar 
+                  conclusions cannot be made about Ozone, since it is heavily influenced by temperature, 
+                  and we only have data through April for 2020.
                 </li>
               </ul>
             </p>
